--- a/css/weddings-admin.css
+++ b/css/weddings-admin.css
@@ -55,6 +55,10 @@
     text-align: center;
   }
   
+  .weddings-list td.remove {
+    cursor: pointer;
+  }
+  
   .weddings-list td input {  
     
   }
